# AnriProject

./: .gitignore  .pre-commit-config.yaml  Makefile  package-lock.json  readme.md
.github/workflows/: default.yaml
api/: .env.example  Dockerfile  Makefile  dev.env  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  wait-for-dependencies.py
api/alembic/: env.py
api/alembic/versions/: 2023_09_03_0943-0590daf50915_initial.py  2023_09_07_0945-8749f83e64c2_init.py  2023_09_10_1400-39d5bc528bfa_contragents_employees.py
api/anri/: asgi.py  celery.py  enviroment.py  urls.py  wsgi.py
api/anri/apps/carts/: admin.py  apps.py  serializers.py  urls.py  views.py
api/anri/apps/carts/migrations/: 0001_initial.py  0002_initial.py
api/anri/apps/carts/models/: __init__.py  cart.py  cart_item.py
api/anri/apps/common/: pagination.py  serializers.py
api/anri/apps/common/models/: core_model.py
api/anri/apps/orders/: admin.py  apps.py  choices.py  serializers.py  tasks.py  urls.py  views.py
api/anri/apps/orders/migrations/: 0001_initial.py  0002_alter_orderitem_order.py  0002_initial.py
api/anri/apps/orders/models/: __init__.py  delivery_address.py  order.py  order_item.py
api/anri/apps/products/: admin.py  apps.py  filters.py  serializer.py  serializers.py  tests.py  urls.py  views.py
api/anri/apps/products/migrations/: 0001_initial.py  0002_alter_product_description.py  0002_productphoto_producttag_product_photocode.py
api/anri/apps/products/models/: __init__.py  cart.py  cart_item.py  carts.py  employee.py  employees.py  order.py  orderItems.py  order_item.py  orders.py  product.py  productPhoto.py  productTags.py  product_tag.py  tag.py  tags.py  user.py  users.py
api/anri/apps/users/: admin.py  apps.py  email.py  serializers.py  tasks.py  urls.py  views.py
api/anri/apps/users/migrations/: 0001_initial.py  0002_alter_userinfo_company_alter_userinfo_rating.py
api/anri/apps/users/models/: __init__.py  contragent.py  employee.py  user_info.py
api/anri/apps/users/templates/email/: activate.html  decline_activation.html
api/anri/settings/: __init__.py  anri.py  celery.py  django.py  djoser.py  jwt.py  rest_framework.py  swagger.py
api/gunicorn/: gunicorn_conf.py
api/scripts/: format  start-dev.sh
api/src/: config.py  custom_model.py  database.py  main.py  models.py  redis_conf.py
api/src/auth/: base_config.py  manager.py  utils.py
api/src/models/: contragent.py  core_model.py  employee.py  product.py  product_photo.py  product_tag.py  tag.py  user.py
api/tests/: test_carts.py  test_orders.py  test_products.py  test_users.py  tests.py
client/: nuxt.config.js  package-lock.json  package.json
client/api/: auth.js  cart.js  index.js  products.js  utils.js
client/assets/styles/: colors.scss  reset.scss
client/components/: LoginForm.vue  Product.vue  ProductList.vue  RegModal.vue  RegistrationForm.vue  SignInForm.vue  Tutorial.vue
client/components/common/: Loader.vue
client/components/layouts/: Cart.vue  CartIcon.vue  Form.vue  Header.vue  Modal.vue
client/layouts/: default.vue
client/pages/: error.vue  index.vue
client/pages/_product/: index.vue
client/pages/activation/: _uid.vue  index.vue
client/pages/activation/uid/: _token.vue
client/plugins/: axios-port.js
client/services/: apiClient.js
client/store/: auth.js  cart.js  header.js  loader.js  popups.js  products.js
docker/: Makefile  docker-compose.yaml
