[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
gunicorn = "^21.2.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.7"
sqlalchemy-file = "^0.5.0"
fasteners = "^0.18"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
